#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.1       ??-??-??
#############################################################################
  * New APBS tutorial

#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.0       02-01-04
#############################################################################
APBS is now supported by the NIH via NIGMS grant GM69702-01.

  CHANGES THAT AFFECT USERS:
  - NEW FEATURES
    * New version of the documentation
    * New directory structure in tools/
    * Finished fe-manual mode for ELEC calculations -- this is the adaptive
      finite element solver
    * Added documetnation for fe-manual
    * New apbs/tools/manip/inputgen.py script to automatically generate input
      APBS files from PQR data
    * Added new asynchronous mode in mg-para parallel calculations to enable
      running on-demand and/or limited resources
    * Added new script (tools/manip/async.sh) to convert mg-para calculations
      in mg-async calculations
    * Added following aliases for some of the more obscure parameters in the
      input files:
        chgm 0 ==> chgm spl0
        chgm 1 ==> chgm spl2
        srfm 0 ==> srfm mol
        srfm 1 ==> srfm smol
        srfm 2 ==> srfm spl2
        bcfl 0 ==> bcfl zero
        bcfl 1 ==> bcfl sdh
        bcfl 2 ==> bcfl mdh
        bcfl 4 ==> bcfl focus
        calcenergy 0 ==> calcenergy no
        calcenergy 1 ==> calcenergy total
        calcenergy 2 ==> calcenergy comps
        calcforce 0 ==> calcforce no
        calcforce 1 ==> calcforce total
        calcforce 2 ==> calcforce comps
      Example input files have been updated to reflect this change.  NOTE:
      the code is backward-compliant; i.e., old input files WILL still work.
    * Added new READ options "PARM" and "MOL PDB", see documentation for more